one time animation added

--- a/ordered.html
+++ b/ordered.html
@@ -22,6 +22,7 @@
     <div class="main">
         YOUR ORDER IS COMPLETED
     </div>
-    
+
+    <script src="ordered page/ordered.js"></script>
 </body>
 </html>
