--- a/tracking.html
+++ b/tracking.html
@@ -23,7 +23,7 @@
         Order 1 <br>
         Quantity = 2<br>
         Payment = 21.99$
-        <span class="date">Ariving Tomrrow</span>
+        <span class="date">Arriving Tomrrow</span>
        </div>
     </div>
 
